--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
         <title>CV Nicolas Chataigneau</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="index.css"/>
+    </head>
+
+    <body>
+
+        <section class ="navBar">
+            <button type="button" name="A propos">A propos</button>
+            <button type="button" name="Expériences">Expériences</button>
+            <button type="button" name="Compétences">Compétences</button>
+        </section>
 
         <section>
-            <div class="photo"></div>
+            <div class="photo">
+                <img src="photo.jpg" alt="Photo de profil"/>
+                <h1>Nicolas Chataigneau</h1>
+            </div>
+
+            <div class="A propos">
+                <h2>A propos de moi</h2>
+                <p>Je m'appelle Nicolas Chataigneau, j'ai 23 ans
+                    et je suis développeur mobile. Je suis en master 2 Mobile et IoT à Ynov Toulouse et en alternance à Capgemini.
+                    Voici les compétences que j'ai pu acquérir au cours de mes expériences en entreprise.
+                    Ce portefolio présente mes quelques projets réalisés au cours de ma formation et mes projets personnels.
+                </p>
+                <a href="https://www.facebook.com/nicolas.chataigneau/">Facebook</a>
+                <a href="https://www.instagram.com/chataigneau/?hl=fr">Instagram</a>
+                <a href="https://www.linkedin.com/in/nicolas-chataigneau-838a981a6/">Linkedin</a>
+                <a href="https://github.com/Chataigneau/WebMobile">GitHub</a>
+
+            </div>
         </section>
-    </head>
+    </body>
+
+    <footer>
+        <p>Email : nicolas.chataigneau@ynov.com</p>
+        <p>Téléphone : 06 45 61 39 23</p>
+    </footer>
 </html>
