--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <button type="button" name="Compétences">Compétences</button>
         </section>
 
-        <section>
+        <section class="A_propos">
             <div class="photo">
                 <img src="photo.jpg" alt="Photo de profil"/>
                 <h1>Nicolas Chataigneau</h1>
             </div>
 
-            <div class="A propos">
+            <div class="A_proposText">
                 <h2>A propos de moi</h2>
                 <p>Je m'appelle Nicolas Chataigneau, j'ai 23 ans
                     et je suis développeur mobile. Je suis en master 2 Mobile et IoT à Ynov Toulouse et en alternance à Capgemini.
@@ -34,10 +34,34 @@
 
             </div>
         </section>
+
+        <section class="Experiences">
+            <div>
+                <h2>Mes expériences</h2>
+                <li>Capgemini - RPA Developper</li>
+                <li>Capgemini - Gatling testing</li>
+                <li>Capgemini - Korn shell scripting</li>
+                <li>Sterella - Application méteo Android natif </li>
+            </div>
+        </section>
+
+        <sectino class="Competences">
+            <div>
+                <h2>Mes compétences</h2>
+                <li>Android Natif</li>
+                <li>Java</li>
+                <li>C++</li>
+                <li>C#</li>
+                <li>HTML / CSS / JS</li>
+                <li>React</li>
+            </div>
+        </sectino>
     </body>
 
-    <footer>
-        <p>Email : nicolas.chataigneau@ynov.com</p>
-        <p>Téléphone : 06 45 61 39 23</p>
+    <footer class="footer">
+        <div>
+            <p>Email : nicolas.chataigneau@ynov.com</p>
+            <p>Téléphone : 06 45 61 39 23</p>
+        </div>
     </footer>
 </html>
