--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
                     Voici les compétences que j'ai pu acquérir au cours de mes expériences en entreprise.
                     Ce portefolio présente mes quelques projets réalisés au cours de ma formation et mes projets personnels.
                 </p>
-                <a href="https://www.facebook.com/nicolas.chataigneau/">Facebook</a>
-                <a href="https://www.instagram.com/chataigneau/?hl=fr">Instagram</a>
-                <a href="https://www.linkedin.com/in/nicolas-chataigneau-838a981a6/">Linkedin</a>
-                <a href="https://github.com/Chataigneau/WebMobile">GitHub</a>
-
+            </div>
+            <div class="A_propos_social">
+                <a href="https://www.facebook.com/nicolas.chataigneau/"> <img src="facebook.png" alt="logoFB"/></a>
+                <a href="https://www.instagram.com/chataigneau/?hl=fr"> <img src="instagram.png" alt="logoInsta"/></a>
+                <a href="https://www.linkedin.com/in/nicolas-chataigneau-838a981a6/"> <img src="linkedin.png" alt="logoLinkedin"/></a>
+                <a href="https://github.com/Chataigneau/WebMobile"> <img src="github.png" alt="logoGitHub"/></a>
             </div>
         </section>
 
